objects/hed__Term_Grade__c.object
<CustomObject>
    <description>Stores student grades for a specific grading period within a Term.</description>
    <fields>
        <fullName>hed__Course_Connection__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The class in which the student received this grade.</description>
        <inlineHelpText>The class in which the student received this grade.</inlineHelpText>
        <label>Course Connection</label>
        <referenceTo>hed__Course_Enrollment__c</referenceTo>
        <relationshipLabel>Term Grades</relationshipLabel>
        <relationshipName>Term_Grades</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>hed__Credits_Attempted__c</fullName>
        <description>The number of credits attempted for this course and grading period.</description>
        <inlineHelpText>The number of credits attempted for this course and grading period.</inlineHelpText>
        <label>Credits Attempted</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>hed__Credits_Earned__c</fullName>
        <description>The number of credits earned for this course and grading period.</description>
        <inlineHelpText>The number of credits earned for this course and grading period.</inlineHelpText>
        <label>Credits Earned</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>hed__Letter_Grade__c</fullName>
        <description>The letter grade the student earned for this course. For example, &quot;A+&quot; or any other text value.</description>
        <inlineHelpText>The letter grade the student earned for this course. For example, &quot;A+&quot; or any other text value.</inlineHelpText>
        <label>Letter Grade</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>hed__Numerical_Grade__c</fullName>
        <description>The numerical grade the student earned for this course, which can be based on any non-percentage number.</description>
        <inlineHelpText>The numerical grade the student earned for this course, which can be based on any non-percentage number.</inlineHelpText>
        <label>Numerical Grade</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>hed__Percent_Grade__c</fullName>
        <description>The percentage grade the student earned for this course.</description>
        <inlineHelpText>The percentage grade the student earned for this course.</inlineHelpText>
        <label>Percent Grade</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>hed__Result__c</fullName>
        <description>The result of the student&apos;s performance for this grading period.</description>
        <inlineHelpText>The result of the student&apos;s performance for this grading period.</inlineHelpText>
        <label>Result</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Audit</fullName>
                </value>
                <value>
                    <fullName>Dropped</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
                <value>
                    <fullName>Pass</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hed__Term_Grade_Type__c</fullName>
        <description>The type of term or grading period for which this grade is being recorded.</description>
        <inlineHelpText>The type of term or grading period for which this grade is being recorded.</inlineHelpText>
        <label>Term Grade Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Exam Grade</fullName>
                </value>
                <value>
                    <fullName>Final Grade</fullName>
                </value>
                <value>
                    <fullName>Grading Period</fullName>
                </value>
                <value>
                    <fullName>Mid-Term Grade</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hed__Term__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The term or grading period for which this grade is being recorded.</description>
        <inlineHelpText>The term or grading period for which this grade is being recorded.</inlineHelpText>
        <label>Term</label>
        <referenceTo>hed__Term__c</referenceTo>
        <relationshipLabel>Term Grades</relationshipLabel>
        <relationshipName>Term_Grades</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Term Grade</label>
    <listViews>
        <fullName>hed__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TG-{0000}</displayFormat>
        <label>Term Grade Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Term Grades</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>